--- a/css/styles.css
+++ b/css/styles.css
@@ -786,3 +786,35 @@ margin-right: 0;
 .portfolio-card-item-link:focus .text-card-anime {
   transform: translateY(0);
 }
+
+
+/**
+  |============================
+  | Register form
+  |============================
+*/
+.register-form-title {
+    display:block;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 25px;
+  }
+  
+  .register-form-group {
+    margin-bottom: 20px;
+  }
+  
+  .register-form-field {
+    position: relative;
+    display: block;
+    margin-bottom: 25px;
+  }
+  
+  .register-form-label {
+    position: absolute;
+    top: 50%;
+    left: 42px;
+    transform: translateY(-50%);
+    display: block;
+    transition: transform var(--anim-fast);
+  }
