--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,7 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 1500ms ease-in-out, opacity 1500ms;
+  padding: 40px;
 }
 
 .modal-btn {
@@ -295,6 +296,10 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
+}
+.modal-btn:hover,
+.modal-btn:focus {
+   fill:var(--act-hero-btn) ;
 }
 /* features */
 .features-link {
@@ -793,28 +798,197 @@ margin-right: 0;
   | Register form
   |============================
 */
-.register-form-title {
-    display:block;
-    text-align: center;
+.register-form-title{
+    display: block;
     font-size: 20px;
-    margin-bottom: 25px;
-  }
-  
-  .register-form-group {
+    margin-bottom: 12px;
+    line-height: calc(23/20);
+    text-align: center;
+    letter-spacing: 0.03em;
+    color:var(--main-text-cl);
+}
+.register-form-group{
     margin-bottom: 20px;
-  }
-  
-  .register-form-field {
+}
+.register-form-field{
     position: relative;
     display: block;
-    margin-bottom: 25px;
-  }
-  
-  .register-form-label {
+    margin-bottom: 10px;
+    text-align: left;
+}
+.register-form-label{
+    display: block;
+    font-size: 12px;
+    margin-bottom: 4px;
+    color: var(--link-cl);
+}
+.register-form-input{
+    width: 100%;
+    height: 45px;
+    padding-left: 42px;
+    padding-right: 42px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: transparent;
+    transition: border-color 400ms;
+}
+.register-form-input:focus,
+.register-form-input:hover {
+   border-color: var(--act-hero-btn);
+}
+.register-form-icon{
     position: absolute;
     top: 50%;
-    left: 42px;
-    transform: translateY(-50%);
+    left: 10px;
+    transform: fill 400ms;
+}
+.register-form-input:focus~.register-form-icon,
+.register-form-input:hover~.register-form-icon {
+    fill: var(--accent-cl);
+}
+.register-form-heading {
+  display: block;
+  font-size: 14px;
+  margin-bottom: 4px;
+}
+.register-form-massage{
     display: block;
-    transition: transform var(--anim-fast);
-  }
+    width: 100%;
+    height: 130px;
+    padding: 18px;
+    font-size: 14px;
+    resize: none;
+    outline: transparent;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+.register-form-massage::placeholder {
+  font-size: 12px;
+}
+.register-form-agreement{
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 10px;
+margin-bottom: 30px;
+}
+.register-form-btn{
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    border-radius: 4px;
+    padding: 10px 52px;
+    min-width: 200px;
+    min-height: 50px;
+    display: block;
+  margin: 0 auto;
+    background-color: var(--act-hero-btn);
+    color: var(--title-cl);
+    text-align: center;
+    border: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.register-form-btn:hover,
+.register-form-btn:focus {
+  background-color:var(--act-hero-btn);}
+
+.icon-checked {
+  opacity: 0;
+  fill: var(--act-hero-btn);
+  transition: opacity 400ms;
+}
+
+.register-form-checkbox:checked + .register-form-icons .icon-checked {
+  opacity: 1;
+}
+.icon-unchecked {
+  transition: opacity 400ms;
+}
+
+.register-form-checkbox:checked + .register-form-icons .icon-unchecked {
+  opacity: 0;
+}
+
+.register-form-desc {
+  font-size: 14px;
+  user-select: none;
+}
+
+.register-form-link {
+  color: var(--accent-cl);
+}
+/**
+  |============================
+  | Foter form
+  |============================
+*/
+.footer-form{
+    margin-left: 93px;
+}
+.footer-form-p{
+font-weight: 700;
+font-size: 14px;
+line-height: calc(16/14);
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--title-cl);
+margin-bottom: 20px;
+}
+.footer-form-flex{
+    display: flex;
+    justify-content:normal;
+}
+.footer-form-email{
+    outline: none;
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    background: rgba(47, 48, 58, 1);
+    margin-right: 12px;
+    padding-top: 15px;
+    padding-left: 16px;
+    padding-bottom: 15px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+.footer-form-button{
+width: 200px;
+height: 50px;
+background-color: var(--act-hero-btn);
+color: var(--title-cl);
+border:  var(--accent-cl);
+border-radius: 4px;
+font-family: 'Roboto';
+font-weight: 700;
+font-size: 16px;
+line-height: calc(30/16);
+letter-spacing: 0.06em;
+cursor: pointer;
+padding-top: 10px;
+padding-bottom: 10px;
+padding-left: 29px;
+padding-right: 62px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-form-button:hover,
+.footer-form-button:focus{
+    background-color: var(--act-hero-btn);
+}
+.footer-form-relativ{
+    position: relative;
+}
+.footer-form-img{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 28px;
+}
